@@ -60,6 +60,11 @@ extern "C" {
 
 VIPS_NAMESPACE_START
 
+/* vips_init() and vips_shutdown as namespaced C++ functions.
+ */
+bool init( const char *argv0 );
+void shutdown( void ); 
+
 /* A VIPS callback, our name for im_callback_fn.
  */
 typedef int (*VCallback)( void *, void * );
